Cisco footer and buildspec

--- a/public/footer.html
+++ b/public/footer.html
@@ -54,11 +54,11 @@ _________________________________________________________ -->
 
                 <h4>Where to find us</h4>
 
-                <p><strong>Weaveworks Ltd.</strong>
-                    <br>32 – 38 Scrutton Street
-                    <br>London
-                    <br>EC2A 4RQ
-                    <br>UK
+                <p><strong>Cisco Systems, Inc.</strong>
+                    <br>San Jose, CA
+                    <br>United States
+                    <br>
+                    <br>
                 </p>
 
                 <hr class="hidden-md hidden-lg">
@@ -72,10 +72,10 @@ _________________________________________________________ -->
                 <h4>Stay in touch</h4>
 
                 <p class="social">
-                    <a href="https://twitter.com/weaveworks" class="twitter external"
+                    <a href="https://twitter.com/cisco" class="twitter external"
                        data-animate-hover="shake"><i
                             class="fa fa-twitter"></i></a>
-                    <a href="mailto:help@weave.works" class="email external"
+                    <a href="mailto:help@cisco.com" class="email external"
                        data-animate-hover="shake"><i
                             class="fa fa-envelope"></i></a>
                 </p>
@@ -100,7 +100,7 @@ _________________________________________________________ -->
 <div id="copyright">
     <div class="container">
         <div class="col-md-6">
-            <p class="pull-left">© 2016-2017 <a href="http://weave.works">Weaveworks</a></p>
+            <p class="pull-left">© 2016-2017 <a href="http://cisco.com">Cisco</a></p>
 
         </div>
         <div class="col-md-6">
